[package]
name = "ambient_sproutz"
edition = "2021"
version = "0.0.1"
description = "Sproutz generates pseudo random procedural tree meshes. Host-only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mebyz/ambient_sproutz"

[dependencies]
ambient_api = "0.2.1"
glam = { version = "0.22", features = ["bytemuck", "serde", "rand"] }
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8"
rand_chacha = "0.3.1"


[lib]
crate-type = ["cdylib"]
